# Tests

./: .gitignore  CMakeLists.txt  README.md  STATUS.md  analyze_complexity.py  consolidate_results.py  generate_report.py  generate_tables.py  plan.md  run_all_tests.py  run_all_tests.sh  run_all_tests_linux.sh  run_all_tests_win.bat  run_test.py  run_tests.py
.devcontainer/: devcontainer.json
Embed/Go/: Main_test.go  build.sh  go.mod  run_test.sh
Embed/Go/ToPython3/: go.mod  run_test.py
Embed/Go/ToPython3/Sanity/: Main_test.go  go.mod  run_test.py
Embed/Python3/: Main_test.py  build_guest.sh  build_host.sh  run_test.sh
Embed/Python3/CallPerformance/: Main_test.py  TestFuncs_MetaFFIHost.py  go.mod  run_test.py
Embed/Python3/CallPerformance/GoDequeDirect/: GoDequeDirect.go  GoDequeDirect.h  go.mod
Embed/Python3/Deque/: Main_test.py  TestFuncs_MetaFFIHost.py  build.sh  go.mod  run_test.py  run_test.sh
Embed/Python3/Sanity/: Main_test.py  TestFuncs_MetaFFIHost.py  run_test.py  run_test.sh  simple_benchmark  simple_benchmark.go  simple_benchmark.py
Guests/Go/: Test.proto  TestFuncs.go
Guests/Go/libraries/go-mcache/: Test.proto  build_guest.sh  go.mod  mcache.proto  readme.md
Guests/Go/libraries/gomcache/: go.mod
Guests/Go/libraries/goutils/: Test.json  Test.proto  build_guest.sh
Guests/Go/remote/: Test.proto  build_guest.sh  go.mod
Guests/Go/sanity/: Test.json  Test.midl  Test.proto  TestFuncs.go  build_guest.sh
Guests/Groovy/sanity/: Test.proto  TestFuncs.groovy  build_guest.sh
Guests/Java/sanity/: Test.proto  TestFuncs.java  build_guest.sh
Guests/Kotlin/sanity/: Test.proto  TestFuncs.kt  build_guest.sh
Guests/Python3/: TestFuncs.py  build_guest.sh
Guests/Python3/extended/: extended_test.py
Guests/Python3/libraries/deque/: build_guest.sh  deque.json  deque.proto
Guests/Python3/libraries/python-string-utils/: build_guest.sh  python_string_utils.json  python_string_utils.proto
Guests/Python3/sanity/: Test.json  Test.proto  TestFuncs.py  build_guest.sh
Guests/Scala/sanity/: Test.proto  TestFuncs.scala  build_guest.sh
Hosts/Go/ToGo/sanity/: Main_test.go  build_host.sh  run_test.sh
Hosts/Go/ToGroovy/sanity/: build_host.sh  go.mod  run_test.sh
Hosts/Go/ToJava/sanity/: MainWindows_test.go  Main_test.go  Test_OpenFFIHost.go  build_guest.sh  go.mod  run_test.py  run_test.sh
Hosts/Go/ToJava/sanity_bytecode/: Main_test.go  run_test.py
Hosts/Go/ToKotlin/sanity/: go.mod  run_test.sh
Hosts/Go/ToPython3/: Main_test.go  build_host.sh  run_test.sh
Hosts/Go/ToPython3/extended/: Main_test.go  run_test.py
Hosts/Go/ToPython3/sanity/: Main_test.go  build_host.sh  go.mod  run_test.py  run_test.sh
Hosts/Go/ToScala/sanity/: Main_test.go  build_host.sh  go.mod  run_test.sh
Hosts/Groovy/ToGo/sanity/: Main_test.groovy  run_test.sh
Hosts/Groovy/ToJava/sanity/: run_test.sh
Hosts/Groovy/ToKotlin/sanity/: Main_test.groovy  run_test.sh
Hosts/Groovy/ToPython3/sanity/: Main_test.groovy  build_host.sh  run_test.sh
Hosts/Groovy/ToScala/sanity/: Main_test.groovy  run_test.sh
Hosts/Java/ToGo/sanity/: Main_test.java  TestMap.java  go.java  run_test.py  run_test.sh
Hosts/Java/ToGroovy/sanity/: Main_test.java  run_test.sh
Hosts/Java/ToKotlin/sanity/: Main_test.java  run_test.sh
configs/: fast_test_config.yml  metaffi_benchmarks_config.yml  only_correctness_config.yml  thesis_any_echo_only_config.yml  thesis_array_echo_only_config.yml  thesis_array_sum_only_config.yml  thesis_config.yml
cpp/: CMakeLists.txt
cpp/call_go/: CMakeLists.txt  test_correctness.cpp  test_env.cpp  test_env.h
cpp/call_java/: CMakeLists.txt  test_correctness.cpp  test_env.cpp
cpp/call_python3/: CMakeLists.txt  test_correctness.cpp  test_env.cpp
go/call_c/: correctness_test.go  go.mod
go/call_cpp/: correctness_test.go  go.mod  go.work
go/call_java/: benchmark_test.go  correctness_test.go  go.mod
go/call_python3/: benchmark_test.go  correctness_test.go  go.mod  go.work.sum
go/without_metaffi/call_java_grpc/: benchmark.proto  benchmark_test.go  generate.bat  generate.sh  go.mod
go/without_metaffi/call_java_jni/: benchmark_test.go  bridge.go  go.mod
go/without_metaffi/call_python3_cpython/: benchmark_test.go  bridge.go  go.mod
go/without_metaffi/call_python3_grpc/: benchmark.proto  benchmark_test.go  generate.bat  generate.sh  go.mod
java/call_c/: pom.xml
java/call_cpp/: pom.xml
java/call_go/: pom.xml
java/call_python3/: pom.xml
java/without_metaffi/call_go_grpc/: pom.xml
java/without_metaffi/call_go_jni/: pom.xml
java/without_metaffi/call_python3_grpc/: pom.xml
java/without_metaffi/call_python3_jep/: pom.xml
python3/call_c/: conftest.py  test_correctness.py
python3/call_cpp/: conftest.py  test_correctness.py
python3/call_go/: conftest.py  test_benchmark.py  test_correctness.py
python3/call_java/: conftest.py  test_benchmark.py  test_correctness.py
python3/without_metaffi/call_go_ctypes/: benchmark.py
python3/without_metaffi/call_go_grpc/: benchmark.proto  benchmark.py  benchmark_pb2.py  benchmark_pb2_grpc.py
python3/without_metaffi/call_java_grpc/: benchmark.proto  benchmark.py  benchmark_pb2.py  benchmark_pb2_grpc.py
python3/without_metaffi/call_java_jpype/: benchmark.py
results/: _tmp_java_to_go_grpc.json  _tmp_java_to_go_grpc_loop_1.json  _tmp_java_to_go_grpc_loop_2.json  _tmp_java_to_go_grpc_loop_3.json  _tmp_java_to_go_grpc_loop_4.json  _tmp_java_to_go_grpc_loop_5.json  _tmp_java_to_go_grpc_loop_6.json  _tmp_java_to_go_grpc_loop_7.json  _tmp_java_to_go_grpc_loop_8.json  _tmp_java_to_go_grpc_once.json  complexity.json  go_to_java_grpc.json  go_to_java_jni.json  go_to_java_metaffi.json  go_to_python3_cpython.json  go_to_python3_grpc.json  go_to_python3_metaffi.json  java_to_go_grpc.json  java_to_go_jni.json  java_to_go_metaffi.json  java_to_python3_grpc.json  java_to_python3_jep.json  java_to_python3_metaffi.json  python3_to_go_ctypes.json  python3_to_go_grpc.json  python3_to_go_metaffi.json  python3_to_java_grpc.json  python3_to_java_jpype.json  python3_to_java_metaffi.json  report.md  tables.md
(+259 files in other folders)
